refactor: replace File APIs with NIO for file upload handling