@@ -2,13 +2,12 @@ package com.zekodnix.zaramoney.service;
 
 import com.cloudinary.Cloudinary;
 import com.cloudinary.utils.ObjectUtils;
-import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
+import java.util.Objects;
+
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -27,9 +26,9 @@ public class UploadFileService {
         validateImageFile(imgUrl);
 
         try {
-            Path filePath = Paths.get(
+            Path filePath = Path.of(
                 System.getProperty("java.io.tmpdir"),
-                imgUrl.getOriginalFilename()
+                Objects.requireNonNull(imgUrl.getOriginalFilename())
             );
 
             Files.write(filePath, imgUrl.getBytes());
